--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
     <script>
@@ -25,6 +26,7 @@
 
     gtag('config', 'G-8H5FKBKJ21');
 </script>
+
 <body>
     <div id="preloader">
         <div class="content">
@@ -35,8 +37,11 @@
     <div class="main">
         <div class="nav">
             <header>
-                <a class="hm" href=index.html><video class="home" autoplay loop muted playsinline ><source src="https://infstranica.b-cdn.net/homebutton.mp4" type="video/mp4"></video></a>
-                <a class="hm_mob" href=index.html><img class="hm_mob_pic" src="https://infstranica.b-cdn.net/icon-trans.png"></a>
+                <a class="hm" href=index.html><video class="home" autoplay loop muted playsinline>
+                        <source src="https://infstranica.b-cdn.net/homebutton.mp4" type="video/mp4">
+                    </video></a>
+                <a class="hm_mob" href=index.html><img class="hm_mob_pic"
+                        src="https://infstranica.b-cdn.net/icon-trans.png"></a>
                 <a class="about" href=History.html>History</a>
                 <a class="family" href=cp.html>Current problems</a>
                 <a class="sources" href=sources.html>Sources</a>
@@ -51,96 +56,100 @@
                 </header>
             </div>
         </div>
-            <main id="swup" class="transition-fade">
-        <div class="gpu4090">
-            <img class="g4090" src="https://infstranica.b-cdn.net/4090.png" width="50%" , style="margin-right: 2%;">
-            <div class="txt4090">
-                <h1>Nvidia Geforce RTX 4090</h1>
-                <h4>Currently the best GPU available.</h4>
-                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu
-                    fugiat nulla pariatur.</h4>
+        <main id="swup" class="transition-fade">
+            <div class="gpu4090">
+                <img class="g4090" src="https://infstranica.b-cdn.net/4090.png" width="50%" , style="margin-right: 2%;">
+                <div class="txt4090">
+                    <h1>Nvidia Geforce RTX 4090</h1>
+                    <h4 style="font-weight: bold;">Currently the best GPU available.</h4>
+                    <h4>The Nvidia GeForce RTX 4090 is a high-end graphics card produced by Nvidia. The 4090 offers 16,384 of the 18,432 cores and 24 GB GDDR6X
+                        graphics memory with a 384 bit memory bus and clocked at 21 Gbits. The card offers an excellent
+                        raytracing performance thanks to the 128 dedicated raytracing cores. For AI calculations (and
+                        DLSS 3 in games), the RTX 4090 has 512 Tensor cores.
+                        The gaming performance is very well suited for 4k gaming in maximum detail settings. Even
+                        Raytracing effects can be used without DLSS in most games.</h4>
+                </div>
             </div>
-        </div>
-        <div class="gpu4090_mob">
-            <img class="g4090" src="https://infstranica.b-cdn.net/4090.png" width="80%" , style="margin-left: 10%;">
-            <div class="txt4090">
-                <h1>Nvidia Geforce RTX 4090</h1>
-                <h4>Currently the best GPU available.</h4>
-                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu
-                    fugiat nulla pariatur.</h4>
+            <div class="gpu4090_mob">
+                <img class="g4090" src="https://infstranica.b-cdn.net/4090.png" width="80%" , style="margin-left: 10%;">
+                <div class="txt4090">
+                    <h1>Nvidia Geforce RTX 4090</h1>
+                    <h4 style="font-weight: bold;">Currently the best GPU available.</h4>
+                    <h4>The Nvidia GeForce RTX 4090 is a high-end graphics card produced by Nvidia. The 4090 offers 16,384 of the 18,432 cores and 24 GB GDDR6X
+                        graphics memory with a 384 bit memory bus and clocked at 21 Gbits. The card offers an excellent
+                        raytracing performance thanks to the 128 dedicated raytracing cores. For AI calculations (and
+                        DLSS 3 in games), the RTX 4090 has 512 Tensor cores.
+                        The gaming performance is very well suited for 4k gaming in maximum detail settings. Even
+                        Raytracing effects can be used without DLSS in most games.</h4>
+                </div>
             </div>
-        </div>
-        <div class="gpu3090">
-            <div class="txt3090">
-                <h1>Nvidia Geforce RTX 3090</h1>
-                <h4>Used to be the best GPU available.</h4>
-                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu
-                    fugiat nulla pariatur.</h4>
+            <div class="gpu3090">
+                <div class="txt3090">
+                    <h1>Nvidia Geforce RTX 3090</h1>
+                    <h4 style="font-weight: bold;">Used to be the best GPU available.</h4>
+                    <h4>The GeForce RTX 3090 is a high-end graphics card produced by Nvidia. It is part of the RTX 30
+                        series of graphics cards and is currently one of the most powerful consumer graphics cards
+                        available. The RTX 3090 features 10496 CUDA cores, 328 Tensor Cores, and 82 RT Cores, and has a
+                        boost clock of up to 1.70 GHz. It also has 24GB of GDDR6X memory with a bandwidth of 936 GB/s,
+                        making it well-suited for demanding tasks such as 4K gaming, high-end content creation, and AI
+                        applications. </h4>
+                </div>
+                <img class="g3090" src="https://infstranica.b-cdn.net/3090-Current%20View.png" width="50%" ,
+                    style="margin-left: 2%;">
             </div>
-            <img class="g3090" src="https://infstranica.b-cdn.net/3090-Current%20View.png" width="50%" ,
-                style="margin-left: 2%;">
-        </div>
-        <div class="gpu3090_mob">
-            <img class="g3090" src="https://infstranica.b-cdn.net/3090-Current%20View.png" width="80%" ,
-                style="margin-left: 10%;">
-            <div class="txt3090">
-                <h1>Nvidia Geforce RTX 3090</h1>
-                <h4>Used to be the best GPU available.</h4>
-                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu
-                    fugiat nulla pariatur.</h4>
+            <div class="gpu3090_mob">
+                <img class="g3090" src="https://infstranica.b-cdn.net/3090-Current%20View.png" width="80%" ,
+                    style="margin-left: 10%;">
+                <div class="txt3090">
+                    <h1>Nvidia Geforce RTX 3090</h1>
+                    <h4 style="font-weight: bold;">Used to be the best GPU available.</h4>
+                    <h4>The GeForce RTX 3090 is a high-end graphics card produced by Nvidia. It is part of the RTX 30
+                        series of graphics cards and is currently one of the most powerful consumer graphics cards
+                        available. The RTX 3090 features 10496 CUDA cores, 328 Tensor Cores, and 82 RT Cores, and has a
+                        boost clock of up to 1.70 GHz. It also has 24GB of GDDR6X memory with a bandwidth of 936 GB/s,
+                        making it well-suited for demanding tasks such as 4K gaming, high-end content creation, and AI
+                        applications. </h4>
+                </div>
+
             </div>
-            
-        </div>
-        <div class="gpu3080">
-            <img class="g3080" src="https://infstranica.b-cdn.net/3080-Current%20View.png" width="50%" ,
-                style="margin-right: 2%;">
-            <div class="txt3080">
-                <h1>Nvidia Geforce RTX 3080</h1>
-                <h4>Used to be the second best GPU available.</h4>
-                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu
-                    fugiat nulla pariatur.</h4>
+            <div class="gpu3080">
+                <img class="g3080" src="https://infstranica.b-cdn.net/3080-Current%20View.png" width="50%" ,
+                    style="margin-right: 2%;">
+                <div class="txt3080">
+                    <h1>Nvidia Geforce RTX 3080</h1>
+                    <h4 style="font-weight: bold;">Used to be the second best GPU available.</h4>
+                    <h4>
+                        The GeForce RTX 3080 is a high-performance graphics card produced by Nvidia. It is part of the
+                        RTX 30 series of graphics
+                        cards and is designed to offer significant improvements in gaming and content creation
+                        performance over its predecessor,
+                        the RTX 2080. The RTX 3080 features 8704 CUDA cores, 272 Tensor Cores, and 68 RT Cores, and has
+                        a boost clock of up to
+                        1.71 GHz. It also has 10GB of GDDR6X memory with a bandwidth of 760 GB/s. It is well-suited
+                        for demanding tasks such as 4K gaming, ray tracing, and AI applications. The RTX 3080 is one of
+                        the most popular
+                        graphics cards on the market due to its high performance and reasonable price point.</h4>
+                </div>
             </div>
-        </div>
-        <div class="gpu3080_mob">
-            <img class="g3080" src="https://infstranica.b-cdn.net/3080-Current%20View.png" width="80%" ,
-                style="margin-left: 10%;">
-            <div class="txt3080">
-                <h1>Nvidia Geforce RTX 3080</h1>
-                <h4>Used to be the second best GPU available.</h4>
-                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu
-                    fugiat nulla pariatur.</h4>
+            <div class="gpu3080_mob">
+                <img class="g3080" src="https://infstranica.b-cdn.net/3080-Current%20View.png" width="80%" ,
+                    style="margin-left: 10%;">
+                <div class="txt3080">
+                    <h1>Nvidia Geforce RTX 3080</h1>
+                    <h4 style="font-weight: bold;">Used to be the second best GPU available.</h4>
+                    <h4>
+                        The GeForce RTX 3080 is a high-performance graphics card produced by Nvidia. It is part of the
+                        RTX 30 series of graphics
+                        cards and is designed to offer significant improvements in gaming and content creation
+                        performance over its predecessor,
+                        the RTX 2080. The RTX 3080 features 8704 CUDA cores, 272 Tensor Cores, and 68 RT Cores, and has
+                        a boost clock of up to
+                        1.71 GHz. It also has 10GB of GDDR6X memory with a bandwidth of 760 GB/s. It is well-suited
+                        for demanding tasks such as 4K gaming, ray tracing, and AI applications. The RTX 3080 is one of
+                        the most popular
+                        graphics cards on the market due to its high performance and reasonable price point.</h4>
+                </div>
             </div>
-        </div>
         </main>
     </div>
     <div class="footer">
@@ -149,7 +158,7 @@
             <p>Nije lose</p>
         </div>
     </div>
-<script src="loader.js"></script>
+    <script src="loader.js"></script>
 </body>
 <script>
     if (navigator.platform.match('Mac') !== null) {
@@ -158,4 +167,5 @@
 </script>
 <script src="https://unpkg.com/swup@3"></script>
 <script>const swup = new Swup();</script>
+
 </html>
