--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                         Raytracing effects can be used without DLSS in most games.</h4>
                 </div>
             </div>
+            <!-- <hr class="divider"> -->
             <div class="gpu3090">
                 <div class="txt3090">
                     <h1>Nvidia Geforce RTX 3090</h1>
@@ -110,8 +111,8 @@
                         making it well-suited for demanding tasks such as 4K gaming, high-end content creation, and AI
                         applications. </h4>
                 </div>
-
             </div>
+            <!-- <hr class="divider"> -->
             <div class="gpu3080">
                 <img class="g3080" src="https://infstranica.b-cdn.net/3080-Current%20View.png" width="50%" ,
                     style="margin-right: 2%;">
