--- a/History.html
+++ b/History.html
@@ -80,6 +80,9 @@
                         scientific and engineering simulations.</p>
                 </div>
             </div>
+        </div>
+        <hr class="divider">
+        <div class="main">
             <img class="left-line" src="https://infstranica.b-cdn.net/line.svg" alt="Curvy line">
             <div class="sap5570">
                 <div class="txt5570">
