--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <div class="gpu4090">
                 <img class="g4090" src="https://infstranica.b-cdn.net/4090.png" width="50%" , style="margin-right: 2%;">
                 <div class="txt4090">
-                    <h1>Nvidia Geforce RTX 4090</h1>
+                    <h1 style="font-weight: bold;">Nvidia Geforce RTX 4090</h1>
                     <h4 style="font-weight: bold;">Currently the best GPU available.</h4>
-                    <h4>The Nvidia GeForce RTX 4090 is a high-end graphics card produced by Nvidia. The 4090 offers 16,384 of the 18,432 cores and 24 GB GDDR6X
+                    <h4 class="abt4090">The Nvidia GeForce RTX 4090 is a high-end graphics card produced by Nvidia. The 4090 offers 16,384 of the 18,432 cores and 24 GB GDDR6X
                         graphics memory with a 384 bit memory bus and clocked at 21 Gbits. The card offers an excellent
                         raytracing performance thanks to the 128 dedicated raytracing cores. For AI calculations (and
                         DLSS 3 in games), the RTX 4090 has 512 Tensor cores.
@@ -73,9 +73,9 @@
             <div class="gpu4090_mob">
                 <img class="g4090" src="https://infstranica.b-cdn.net/4090.png" width="80%" , style="margin-left: 10%;">
                 <div class="txt4090">
-                    <h1>Nvidia Geforce RTX 4090</h1>
+                    <h1 style="font-weight: bold;">Nvidia Geforce RTX 4090</h1>
                     <h4 style="font-weight: bold;">Currently the best GPU available.</h4>
-                    <h4>The Nvidia GeForce RTX 4090 is a high-end graphics card produced by Nvidia. The 4090 offers 16,384 of the 18,432 cores and 24 GB GDDR6X
+                    <h4 class="abt4090">The Nvidia GeForce RTX 4090 is a high-end graphics card produced by Nvidia. The 4090 offers 16,384 of the 18,432 cores and 24 GB GDDR6X
                         graphics memory with a 384 bit memory bus and clocked at 21 Gbits. The card offers an excellent
                         raytracing performance thanks to the 128 dedicated raytracing cores. For AI calculations (and
                         DLSS 3 in games), the RTX 4090 has 512 Tensor cores.
@@ -86,9 +86,9 @@
             <!-- <hr class="divider"> -->
             <div class="gpu3090">
                 <div class="txt3090">
-                    <h1>Nvidia Geforce RTX 3090</h1>
+                    <h1 style="font-weight: bold;">Nvidia Geforce RTX 3090</h1>
                     <h4 style="font-weight: bold;">Used to be the best GPU available.</h4>
-                    <h4>The GeForce RTX 3090 is a high-end graphics card produced by Nvidia. It is part of the RTX 30
+                    <h4 class="abt3090">The GeForce RTX 3090 is a high-end graphics card produced by Nvidia. It is part of the RTX 30
                         series of graphics cards and is currently one of the most powerful consumer graphics cards
                         available. The RTX 3090 features 10496 CUDA cores, 328 Tensor Cores, and 82 RT Cores, and has a
                         boost clock of up to 1.70 GHz. It also has 24GB of GDDR6X memory with a bandwidth of 936 GB/s,
@@ -102,9 +102,9 @@
                 <img class="g3090" src="https://infstranica.b-cdn.net/3090-Current%20View.png" width="80%" ,
                     style="margin-left: 10%;">
                 <div class="txt3090">
-                    <h1>Nvidia Geforce RTX 3090</h1>
+                    <h1 style="font-weight: bold;">Nvidia Geforce RTX 3090</h1>
                     <h4 style="font-weight: bold;">Used to be the best GPU available.</h4>
-                    <h4>The GeForce RTX 3090 is a high-end graphics card produced by Nvidia. It is part of the RTX 30
+                    <h4 class="abt3090">The GeForce RTX 3090 is a high-end graphics card produced by Nvidia. It is part of the RTX 30
                         series of graphics cards and is currently one of the most powerful consumer graphics cards
                         available. The RTX 3090 features 10496 CUDA cores, 328 Tensor Cores, and 82 RT Cores, and has a
                         boost clock of up to 1.70 GHz. It also has 24GB of GDDR6X memory with a bandwidth of 936 GB/s,
@@ -117,9 +117,9 @@
                 <img class="g3080" src="https://infstranica.b-cdn.net/3080-Current%20View.png" width="50%" ,
                     style="margin-right: 2%;">
                 <div class="txt3080">
-                    <h1>Nvidia Geforce RTX 3080</h1>
+                    <h1 style="font-weight: bold;">Nvidia Geforce RTX 3080</h1>
                     <h4 style="font-weight: bold;">Used to be the second best GPU available.</h4>
-                    <h4>
+                    <h4 class="abt3080">
                         The GeForce RTX 3080 is a high-performance graphics card produced by Nvidia. It is part of the
                         RTX 30 series of graphics
                         cards and is designed to offer significant improvements in gaming and content creation
@@ -136,9 +136,9 @@
                 <img class="g3080" src="https://infstranica.b-cdn.net/3080-Current%20View.png" width="80%" ,
                     style="margin-left: 10%;">
                 <div class="txt3080">
-                    <h1>Nvidia Geforce RTX 3080</h1>
+                    <h1 style="font-weight: bold;">Nvidia Geforce RTX 3080</h1>
                     <h4 style="font-weight: bold;">Used to be the second best GPU available.</h4>
-                    <h4>
+                    <h4 class="abt3080">
                         The GeForce RTX 3080 is a high-performance graphics card produced by Nvidia. It is part of the
                         RTX 30 series of graphics
                         cards and is designed to offer significant improvements in gaming and content creation
