--- a/cp.html
+++ b/cp.html
@@ -42,7 +42,14 @@
                     </header>
                 </div>
             </div>
-        <script src="" async defer></script>
+        </div>
+            <div class="fali">
+                <div class="content">
+                    <h1>WiP</h1>
+                    <h1>WiP</h1>
+                </div>
+            </div>
+                <a class="back" href="index.html">Back to home</a>
     </body>
     <script>
         if (navigator.platform.match('Mac') !== null) {
