--- a/sources.html
+++ b/sources.html
@@ -4,49 +4,62 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
+
+<head>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>History</title>
     <meta name="description" content="Best GPUs available">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="Design_history.css">
+    <link rel="stylesheet" href="Design_sources.css">
     <link rel="icon" type="image/x-icon" href="https://infstranica.b-cdn.net/icon.png">
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'G-8H5FKBKJ21');
-</script>
+        gtag('config', 'G-8H5FKBKJ21');
+    </script>
 </head>
-    <body>
-        <div class="main">
+
+<body>
+    <div class="main">
+        <div class="nav">
+            <header>
+                <a class="hm" href=index.html><video class="home" autoplay loop>
+                        <source src="https://infstranica.b-cdn.net/homebutton.mp4" type="video/mp4">
+                    </video></a>
+                <a class="hm_mob" href=index.html><img class="hm_mob_pic"
+                        src="https://infstranica.b-cdn.net/icon-trans.png"></a>
+                <a class="about" href=History.html>History</a>
+                <a class="family" href=cp.html>Current problems</a>
+                <a class="sources" href=sources.html>Sources</a>
+            </header>
+        </div>
+        <div class="main_mobile">
             <div class="nav">
                 <header>
-                    <a class="hm" href=index.html><video class="home" autoplay loop><source src="https://infstranica.b-cdn.net/homebutton.mp4" type="video/mp4"></video></a>
-                    <a class="hm_mob" href=index.html><img class="hm_mob_pic" src="https://infstranica.b-cdn.net/icon-trans.png"></a>
-                    <a class="about" href=History.html>History</a>
-                    <a class="family" href=cp.html>Current problems</a>
-                    <a class="sources" href=sources.html>Sources</a>
+                    <a class="about_mobile" href=History.html>History</a>
+                    <a class="family_mobile" href=cp.html>Current problems</a>
+                    <a class="sources_mobile" href=sources.html>Sources</a>
                 </header>
             </div>
-            <div class="main_mobile">
-                <div class="nav">
-                    <header>
-                        <a class="about_mobile" href=History.html>History</a>
-                        <a class="family_mobile" href=cp.html>Current problems</a>
-                        <a class="sources_mobile" href=sources.html>Sources</a>
-                    </header>
-                </div>
-            </div>
-        <script src="" async defer></script>
-    </body>
-    <script>
-        if (navigator.platform.match('Mac') !== null) {
-            document.body.setAttribute('class', 'osx');
-        }
-    </script>
+        </div>
+    </div>
+    <div class="fali">
+        <div class="content">
+            <h1>WiP</h1>
+            <h1>WiP</h1>
+        </div>
+    </div>
+        <a class="back" href="index.html">Back to home</a>
+</body>
+<script>
+    if (navigator.platform.match('Mac') !== null) {
+        document.body.setAttribute('class', 'osx');
+    }
+</script>
+
 </html>
