--- a/cp.html
+++ b/cp.html
@@ -49,6 +49,12 @@
                     <h1>WiP</h1>
                 </div>
             </div>
+            <div class="fali_mob">
+                <div class="content_mob">
+                    <h1>WiP</h1>
+                    <h1>WiP</h1>
+                </div>
+            </div>
                 <a class="back" href="index.html">Back to home</a>
     </body>
     <script>
