--- a/sources.html
+++ b/sources.html
@@ -60,7 +60,17 @@
             <h1>WiP</h1>
         </div>
     </div>
-        <a class="back" href="index.html">Back to home</a>
+    <a class="back" href="index.html">Back to home</a>
+    <script>
+        var fill = document.getElementsByClassName("content").children
+        elements.item(2);
+        var nofill = document.getElementsByClassName("content").children
+        elements.item(1);
+        if (fill.style.color = rgb(0, 247, 255)) {
+            nofill.style.color = rgb(0, 247, 255);
+        }
+
+    </script>
 </body>
 <script>
     if (navigator.platform.match('Mac') !== null) {
