--- a/sources.html
+++ b/sources.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>History</title>
+    <title>Sources</title>
     <meta name="description" content="Best GPUs available">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Design_sources.css">
@@ -61,6 +61,11 @@
         </div>
     </div>
     <a class="back" href="index.html">Back to home</a>
+    <p class="game">Scroll down for mini game</p>
+    <p class="game">&darr;</p>
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.334/build/spline-viewer.js"></script>
+<spline-viewer class="spline" url="https://prod.spline.design/TeWC31Q1xNGG082H/scene.splinecode"></spline-viewer>
+
     <script>
         var fill = document.getElementsByClassName("content").children
         elements.item(2);
