--- a/cp.html
+++ b/cp.html
@@ -56,10 +56,10 @@
                 </div>
             </div>
                 <a class="back" href="index.html">Back to home</a>
-                <p class="game">Scroll down for mini game</p>
+                <!-- <p class="game">Scroll down for mini game</p>
     <p class="game">&darr;</p>
     <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.334/build/spline-viewer.js"></script>
-<spline-viewer class="spline" url="https://prod.spline.design/TeWC31Q1xNGG082H/scene.splinecode"></spline-viewer>
+<spline-viewer class="spline" url="https://prod.spline.design/TeWC31Q1xNGG082H/scene.splinecode"></spline-viewer> -->
 
     </body>
     <script>
