--- a/sources.html
+++ b/sources.html
@@ -50,21 +50,21 @@
     </div>
     <div class="fali">
         <div class="content">
-            <h1>WiP</h1>
-            <h1>WiP</h1>
+            <h1>ಠ_ಠ</h1>
+            <h1>ಠ_ಠ</h1>
         </div>
     </div>
     <div class="fali_mob">
         <div class="content_mob">
-            <h1>WiP</h1>
-            <h1>WiP</h1>
+            <h1>ಠ_ಠ</h1>
+            <h1>ಠ_ಠ</h1>
         </div>
     </div>
     <a class="back" href="index.html">Back to home</a>
-    <p class="game">Scroll down for mini game</p>
+    <!-- <p class="game">Scroll down for mini game</p>
     <p class="game">&darr;</p>
     <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.334/build/spline-viewer.js"></script>
-<spline-viewer class="spline" url="https://prod.spline.design/TeWC31Q1xNGG082H/scene.splinecode"></spline-viewer>
+<spline-viewer class="spline" loading="lazy" url="https://prod.spline.design/TeWC31Q1xNGG082H/scene.splinecode"></spline-viewer> -->
 
     <script>
         var fill = document.getElementsByClassName("content").children
