--- a/music.html
+++ b/music.html
@@ -26,8 +26,8 @@
         <div class="main">
             <div class="nav">
                 <header>
-                    <a class="hm" href=index.html><img class="home" src="https://infstranica.b-cdn.net/IMG_2392.png"></a>
-                    <a class="hm_mob" href=index.html><img class="hm_mob_pic" src="https://infstranica.b-cdn.net/IMG_2392.png"></a>
+                    <a class="hm" href=index.html><img class="home" src="https://infstranica.b-cdn.net/icon.png"></a>
+                    <a class="hm_mob" href=index.html><img class="hm_mob_pic" src="https://infstranica.b-cdn.net/icon.png"></a>
                     <a class="about" href=History.html>History</a>
                     <a class="family" href=cp.html>Current problems</a>
                     <a class="sources" href=music.html>Sources</a>
@@ -42,12 +42,7 @@
                     </header>
                 </div>
             </div>
-    <h1>Playboi Carti - 24 Songs</h1>
-<audio class="cart" controls preload="auto">
-  <source src="https://infstranica.b-cdn.net/24%20songs%20terrax%20mix.wav" type="audio/wav" />
-</audio>
-<a class="cart_down" href="https://infstranica.b-cdn.net/24%20songs%20terrax%20mix.wav" download="Playboi Carti - 24 songs.wav">Download</a>
-</div>
+    <
         <script src="" async defer></script>
 
     </body>
