--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sources</title>
-    <meta name="description" content="Best GPUs available">
+    <meta name="description" content="music">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Design_sources.css">
     <link rel="icon" type="image/x-icon" href="https://infstranica.b-cdn.net/icon.png">
