--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
         </main>
     </div>
     <div class="footer">
-        <p class="left">Bruno , Filip</p>
+        <p class="left">Bruno</p>
         <div>
-            <p>Nije lose</p>
+            <p>lOl</p>
         </div>
     </div>
     <script src="loader.js"></script>
