--- a/cp.html
+++ b/cp.html
@@ -55,7 +55,9 @@
                     <h1>ಠ_ಠ</h1>
                 </div>
             </div>
+            <div class="backd">
                 <a class="back" href="index.html">Back to home</a>
+            </div>
                 <!-- <p class="game">Scroll down for mini game</p>
     <p class="game">&darr;</p>
     <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.334/build/spline-viewer.js"></script>
